--- a/css/scss/interface_publicacao.scss
+++ b/css/scss/interface_publicacao.scss
@@ -4,14 +4,88 @@
   outline: none;
 }
 
+.center {
+  width: 1280px;
+  margin: 0 auto;
+  position: relative;
+}
+
 header {
   width: 100%;
   height: 100px;
   background: #5f5f5f;
+  position: relative;
 
   h2 {
     line-height: 100px;
     color: #ffffff;
     text-align: center;
+  }
+
+  #perfil {
+    position: absolute;
+    top: 25px;
+    right: 10px;
+    width: 150px;
+    overflow: hidden;
+
+    figure {
+      float: left;
+
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+      }
+    }
+
+    .name {
+      float: left;
+      margin: 8px 0 0 10px;
+      color: #ffffff;
+    }
+  }
+}
+
+main {
+  nav#system {
+    ul {
+
+      li {
+        display: inline-block;
+        margin-left: 10px;
+        margin-top: 10px;
+
+        a {
+          color: #17b3ce;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  nav#dashboard {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-items: center;
+      margin-top: 50px;
+
+      li {
+        flex-basis: 50%;
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        margin-top: 20px;
+        height: 100px;
+
+        a {
+          text-decoration: none;
+          color: #9f9f9f;
+          margin-left: 10px;
+        }
+      }
+    }
   }
 }
