--- a/css/src/main.css
+++ b/css/src/main.css
@@ -34,4 +34,30 @@ header {
       margin: 8px 0 0 10px;
       color: #ffffff; }
 
+main nav#system ul li {
+  display: inline-block;
+  margin-left: 10px;
+  margin-top: 10px; }
+  main nav#system ul li a {
+    color: #17b3ce;
+    text-decoration: none; }
+main nav#dashboard ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-items: center;
+  margin-top: 50px; }
+  main nav#dashboard ul li {
+    flex-basis: 48%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    margin-top: 20px;
+    height: 100px; }
+    main nav#dashboard ul li a {
+      text-decoration: none;
+      color: #9f9f9f;
+      margin-left: 10px;
+      display: block; }
+
 /*# sourceMappingURL=main.css.map */
