--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -89,4 +89,87 @@ main {
       }
     }
   }
+
+  /* Produtos cadastrados */
+
+  #produtos_cadastrados {
+    #recive {
+      width: 100%;
+      height: 300px;
+      border: 2px solid #5f5f5f;
+      border-radius: 6px;
+      margin-top: 20px;
+    }
+
+    .buttons {
+      margin-top: 20px;
+
+      .left {
+        float: left;
+      }
+
+      .right {
+        float: right;
+      }
+    }
+  }
+
+  /* FIM Produtos cadastrados */
+}
+
+form {
+  margin-top: 20px;
+
+  .form-item {
+    width: 100%;
+    overflow: hidden;
+
+    label {
+      width: 100%;
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    input[type="text"] {
+      width: calc(100% - 20px);
+      height: 35px;
+      border-radius: 6px;
+      color: #ffffff;
+      padding: 0 10px;
+
+      &.black {
+        width: calc(100% - 70px);
+        background: #5f5f5f;
+        color: #ffffff;
+        border: 1px solid #5f5f5f;
+      }
+
+      &::placeholder{
+        color: #ffffff;
+      }
+    }
+
+    input[type="image"] {
+       margin: 0 0 -10px 10px;
+      float: right;
+    }
+  }
+}
+
+button {
+  padding: 10px 30px;
+  color: #5f5f5f;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+button.white {
+  border: 1px solid #5f5f5f;
+  background: #ffffff;
+}
+
+button.red {
+  background: #fe0000;
+  color: #ffffff;
+  border: 1px solid #fe0000
 }
