--- a/css/src/main.css
+++ b/css/src/main.css
@@ -34,30 +34,86 @@ header {
       margin: 8px 0 0 10px;
       color: #ffffff; }
 
-main nav#system ul li {
-  display: inline-block;
-  margin-left: 10px;
-  margin-top: 10px; }
-  main nav#system ul li a {
-    color: #17b3ce;
-    text-decoration: none; }
-main nav#dashboard ul {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-items: center;
-  margin-top: 50px; }
-  main nav#dashboard ul li {
-    flex-basis: 48%;
+main {
+  /* Produtos cadastrados */
+  /* FIM Produtos cadastrados */ }
+  main nav#system ul li {
+    display: inline-block;
+    margin-left: 10px;
+    margin-top: 10px; }
+    main nav#system ul li a {
+      color: #17b3ce;
+      text-decoration: none; }
+  main nav#dashboard ul {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-items: center;
-    margin-top: 20px;
-    height: 100px; }
-    main nav#dashboard ul li a {
-      text-decoration: none;
-      color: #9f9f9f;
-      margin-left: 10px;
-      display: block; }
+    margin-top: 50px; }
+    main nav#dashboard ul li {
+      flex-basis: 48%;
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      margin-top: 20px;
+      height: 100px; }
+      main nav#dashboard ul li a {
+        text-decoration: none;
+        color: #9f9f9f;
+        margin-left: 10px;
+        display: block; }
+  main #produtos_cadastrados #recive {
+    width: 100%;
+    height: 300px;
+    border: 2px solid #5f5f5f;
+    border-radius: 6px;
+    margin-top: 20px; }
+  main #produtos_cadastrados .buttons {
+    margin-top: 20px; }
+    main #produtos_cadastrados .buttons .left {
+      float: left; }
+    main #produtos_cadastrados .buttons .right {
+      float: right; }
+
+form {
+  margin-top: 20px; }
+  form .form-item {
+    width: 100%;
+    overflow: hidden; }
+    form .form-item label {
+      width: 100%;
+      display: block;
+      margin-bottom: 10px; }
+    form .form-item input[type="text"] {
+      width: calc(100% - 20px);
+      height: 35px;
+      border-radius: 6px;
+      color: #ffffff;
+      padding: 0 10px; }
+      form .form-item input[type="text"].black {
+        width: calc(100% - 70px);
+        background: #5f5f5f;
+        color: #ffffff;
+        border: 1px solid #5f5f5f; }
+      form .form-item input[type="text"]::placeholder {
+        color: #ffffff; }
+    form .form-item input[type="image"] {
+      margin: 0 0 -10px 10px;
+      float: right; }
+
+button {
+  padding: 10px 30px;
+  color: #5f5f5f;
+  font-weight: bold;
+  border-radius: 4px; }
+
+button.white {
+  border: 1px solid #5f5f5f;
+  background: #ffffff; }
+
+button.red {
+  background: #fe0000;
+  color: #ffffff;
+  border: 1px solid #fe0000; }
 
 /*# sourceMappingURL=main.css.map */
