--- a/css/src/main.css
+++ b/css/src/main.css
@@ -111,7 +111,8 @@ form {
   margin: 30px 0 0 0;
   background: #9f9f9f;
   color: #ffffff;
-  border-radius: 4px; }
+  border-radius: 4px;
+  cursor: pointer; }
 
 button {
   padding: 10px 30px;
