--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,159 +1,276 @@
 * {
-  padding: 0;
-  margin: 0;
-  outline: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+}
+
+body {
+    font-family: "Open Sans";
+}
+
+.clear {
+    clear: both;
 }
 
 .center {
-  width: 1280px;
-  margin: 0 auto;
-  position: relative;
+    width: 1280px;
+    margin: 0 auto;
+    position: relative;
 }
 
 header {
-  width: 100%;
-  height: 100px;
-  background: #5f5f5f;
-  position: relative;
+    width: 100%;
+    height: 100px;
+    background: #5f5f5f;
+    position: relative;
 
-  h2 {
-    line-height: 100px;
-    color: #ffffff;
-    text-align: center;
-  }
-
-  #perfil {
-    position: absolute;
-    top: 25px;
-    right: 10px;
-    width: 150px;
-    overflow: hidden;
-
-    figure {
-      float: left;
-
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 100%;
-      }
+    h2 {
+        line-height: 100px;
+        color: #ffffff;
+        text-align: center;
     }
 
-    .name {
-      float: left;
-      margin: 8px 0 0 10px;
-      color: #ffffff;
+    #perfil {
+        position: absolute;
+        top: 25px;
+        right: 10px;
+        width: 150px;
+        overflow: hidden;
+
+        figure {
+            float: left;
+
+            img {
+                width: 50px;
+                height: 50px;
+                border-radius: 100%;
+            }
+        }
+
+        .name {
+            float: left;
+            margin: 8px 0 0 10px;
+            color: #ffffff;
+        }
     }
-  }
 }
 
 main {
-  nav#system {
-    ul {
+    nav#system {
+        ul {
 
-      li {
-        display: inline-block;
-        margin-left: 10px;
-        margin-top: 10px;
+            li {
+                display: inline-block;
+                margin-left: 10px;
+                margin-top: 10px;
 
-        a {
-          color: #17b3ce;
-          text-decoration: none;
+                a {
+                    color: #17b3ce;
+                    text-decoration: none;
+                }
+            }
         }
-      }
     }
-  }
 
-  nav#dashboard {
-    ul {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-items: center;
-      margin-top: 50px;
+    nav#dashboard {
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-items: center;
+            margin-top: 50px;
 
-      li {
-        flex-basis: 48%;
-        display: flex;
-        align-items: center;
-        justify-items: center;
-        margin-top: 20px;
-        height: 100px;
+            li {
+                flex-basis: 48%;
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                margin-top: 20px;
+                height: 100px;
 
-        a {
-          text-decoration: none;
-          color: #9f9f9f;
-          margin-left: 10px;
-          display: block;
+                a {
+                    text-decoration: none;
+                    color: #9f9f9f;
+                    margin-left: 10px;
+                    display: block;
+                }
+            }
         }
-      }
-    }
-  }
-
-  /* Produtos cadastrados */
-
-  #produtos_cadastrados {
-    #recive {
-      width: 100%;
-      height: 300px;
-      border: 2px solid #5f5f5f;
-      border-radius: 6px;
-      margin-top: 20px;
     }
 
-    .buttons {
-      margin-top: 20px;
+    /* Produtos cadastrados */
 
-      .left {
-        float: left;
-      }
+    #produtos_cadastrados {
+        #recive {
+            width: 100%;
+            height: 300px;
+            border: 2px solid #5f5f5f;
+            border-radius: 6px;
+            margin-top: 20px;
+        }
 
-      .right {
-        float: right;
-      }
+        .buttons {
+            margin-top: 20px;
+
+            .left {
+                float: left;
+            }
+
+            .right {
+                float: right;
+            }
+        }
     }
-  }
 
-  /* FIM Produtos cadastrados */
+    /* FIM Produtos cadastrados */
 }
 
 form {
-  margin-top: 20px;
+    margin-top: 20px;
 
-  .form-item {
-    width: 100%;
-    overflow: hidden;
-
-    label {
-      width: 100%;
-      display: block;
-      margin-bottom: 10px;
+    .info-campos {
+        padding: 30px 0;
+        font-size: 14px;
     }
 
-    input[type="text"] {
-      width: calc(100% - 20px);
-      height: 35px;
-      border-radius: 6px;
-      color: #ffffff;
-      padding: 0 10px;
+    .classificacao {
+        display: block;
+        overflow: hidden;
+        margin: 30px 0;
 
-      &.black {
-        width: calc(100% - 70px);
-        background: #5f5f5f;
-        color: #ffffff;
-        border: 1px solid #5f5f5f;
-      }
+        li {
+            display: inline-block;
+            list-style: none;
+            width: 50px;
+            height: 50px;
+            border-radius: 6px;
 
-      &::placeholder{
-        color: #ffffff;
-      }
+            &.active {
+                border: 2px solid #5f5f5f;
+            }
+
+            .label {
+                width: 40px;
+                height: 40px;
+                margin: 5px;
+                background: red;
+                color: #ffffff;
+                line-height: 40px;
+                text-align: center;
+                border-radius: 6px;
+                font-weight: bold;
+
+                &.green { background: #00ad51; }
+                &.blue { background: #00ccff; }
+                &.yellow { background: #ffcc00; }
+                &.orange { background: #ff6600; }
+                &.red { background: #fd0100; }
+                &.black { background: #000000; }
+                &.white { background: #ffffff; color: #000000; border: 1px solid #000000}
+            }
+        }
     }
 
-    input[type="image"] {
-       margin: 0 0 -10px 10px;
-      float: right;
+    .form-item {
+        width: 100%;
+        overflow: hidden;
+        margin-bottom: 20px;
+        font-weight: normal;
+
+        label {
+            width: 100%;
+            display: block;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        textarea {
+            width: 96%;
+            height: 120px;
+            border-radius: 6px;
+            color: #ffffff;
+            padding: 0 10px;
+            border: 1px solid #5f5f5f;
+        }
+
+        input[type="text"] {
+            width: 96%;
+            height: 35px;
+            border-radius: 6px;
+            color: #5f5f5f;
+            padding: 0 10px;
+            border: 1px solid #5f5f5f;
+
+            &.black {
+                width: calc(100% - 70px);
+                background: #5f5f5f;
+                color: #ffffff;
+                border: 1px solid #5f5f5f;
+                color: #ffffff;
+
+                &::placeholder{
+                    color: #ffffff;
+                }
+            }
+
+            &::placeholder{
+                color: #5f5f5f;
+            }
+        }
+
+        input[type="image"] {
+            margin: 0 0 -10px 10px;
+            float: right;
+        }
+
+        &.medium {
+            width: 46%;
+            float: left;
+        }
+
+        &.action-right {
+            margin-left: 6%;
+        }
+
+        &.actions {
+            .block-left {
+                width: calc(100% - 130px);
+                float: left;
+            }
+
+            .settings {
+                width: 100px;
+                float: left;
+                margin-top: 30px;
+                overflow: hidden;
+                text-align: center;
+
+                div {
+                    width: 38px;
+                    height: 38px;
+                    line-height: 38px;
+                    border: 1px solid #5f5f5f;
+                    color: #5f5f5f;
+                    background: #ffffff;
+                    float: left;
+                    border-radius: 4px;
+
+                    &:last-child {
+                        margin-left: 20px;
+                    }
+                }
+            }
+        }
     }
-  }
+}
+
+p.title {
+    width: 98%;
+    font-size: 18px;
+    color: #5f5f5f;
+    border-bottom: 1px solid #5f5f5f;
+    margin: 40px 0 30px 0;
+    padding-bottom: 10px;
 }
 
 .clear {
@@ -172,19 +289,26 @@ form {
 }
 
 button {
-  padding: 10px 30px;
-  color: #5f5f5f;
-  font-weight: bold;
-  border-radius: 4px;
+    padding: 10px 30px;
+    color: #5f5f5f;
+    font-weight: bold;
+    border-radius: 4px;
+
+    &.cadastrar {
+        background: #26dcf2;
+        color: #ffffff;
+        font-weight: bold;
+        border: 1px solid #26dcf2;
+    }
 }
 
 button.white {
-  border: 1px solid #5f5f5f;
-  background: #ffffff;
+    border: 1px solid #5f5f5f;
+    background: #ffffff;
 }
 
 button.red {
-  background: #fe0000;
-  color: #ffffff;
-  border: 1px solid #fe0000
+    background: #fe0000;
+    color: #ffffff;
+    border: 1px solid #fe0000
 }
