Ajuste pagina de cadastro de produtos e add jquery ao projeto

--- a/css/src/main.css
+++ b/css/src/main.css
@@ -22,7 +22,8 @@ header {
   header h2 {
     line-height: 100px;
     color: #ffffff;
-    text-align: center; }
+    text-align: center;
+    text-transform: uppercase; }
   header #perfil {
     position: absolute;
     top: 25px;
