--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -28,6 +28,7 @@ header {
         line-height: 100px;
         color: #ffffff;
         text-align: center;
+        text-transform: uppercase;
     }
 
     #perfil {
