--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -189,8 +189,8 @@ form {
             width: 96%;
             height: 120px;
             border-radius: 6px;
-            color: #ffffff;
-            padding: 0 10px;
+            color: #5f5f5f;
+            padding: 10px;
             border: 1px solid #5f5f5f;
         }
 
@@ -260,6 +260,12 @@ form {
                         margin-left: 20px;
                     }
                 }
+            }
+        }
+
+        &.error {
+            input, textarea {
+                border: 1px solid red;
             }
         }
     }
