--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -127,7 +127,7 @@ main {
 }
 
 form {
-    margin-top: 20px;
+    margin: 30px 0;
 
     .info-campos {
         padding: 30px 0;
@@ -237,6 +237,14 @@ form {
             .block-left {
                 width: calc(100% - 130px);
                 float: left;
+            }
+
+            .recive-list {
+                margin-top: 20px;
+                width: calc(100% - 25px);
+                height: 150px;
+                border: 1px solid #5f5f5f;
+                border-radius: 6px;
             }
 
             .settings {
