--- a/css/src/main.css
+++ b/css/src/main.css
@@ -83,7 +83,7 @@ main {
       float: right; }
 
 form {
-  margin-top: 20px; }
+  margin: 30px 0; }
   form .info-campos {
     padding: 30px 0;
     font-size: 14px; }
@@ -170,6 +170,12 @@ form {
     form .form-item.actions .block-left {
       width: calc(100% - 130px);
       float: left; }
+    form .form-item.actions .recive-list {
+      margin-top: 20px;
+      width: calc(100% - 25px);
+      height: 150px;
+      border: 1px solid #5f5f5f;
+      border-radius: 6px; }
     form .form-item.actions .settings {
       width: 100px;
       float: left;
