add botao de add produtos

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -292,7 +292,7 @@ p.title {
     clear: both;
 }
 
-.new-product {
+.new-button {
     float: right;
     padding: 10px 30px;
     border: 1px solid #9f9f9f;
