--- a/css/src/main.css
+++ b/css/src/main.css
@@ -207,7 +207,7 @@ p.title {
 .clear {
   clear: both; }
 
-.new-product {
+.new-button {
   float: right;
   padding: 10px 30px;
   border: 1px solid #9f9f9f;
