--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -24,20 +24,97 @@ body {
             border: 1px solid #5e5e5e;
             border-radius: 4px;
             overflow: hidden;
+            position: relative;
+            margin: 40px 0;
 
-            figure {
-                width: 235px;
+            .status_publicacao {
+                position: absolute;
+                top: 15px;
+                right: 20px;
+                font-weight: bold;
+
+                &.rascunho {
+                    color: red;
+                }
+
+                &.processo {
+                    color: blue;
+                }
+
+                &.publicado {
+                    color: #000000;
+                }
+            }
+
+            .info-block {
+
+                .block-left {
+                    width: 235px;
+                    float: left;
+
+                    .fullscreen {
+                        margin-top: 10px;
+                    }
+                }
+
+                .block-right {
+                    width: calc(100% - 270px);
+                    margin: 0 10px;
+                    float: left;
+
+                    ul {
+                        li {
+                            list-style: none;
+                            margin:  0;
+                            font-weight: bold;
+                            color: #5e5e5e;
+                        }
+                    }
+
+                    .buttons {
+                        margin-top: 25px;
+
+                        .white {
+                            margin-left: 50px;
+                        }
+                    }
+                }
+            }
+        }
+
+        #paginacao {
+            width: 96%;
+            margin-bottom: 60px;
+            overflow: hidden;
+
+            a.prev {
+                width: 15%;
                 float: left;
+                color: #5e5e5e;
+                font-weight: bold;
             }
 
             ul {
-                width: calc(100% - 250px);
-                margin-left: 10px;
+                float: left;
+                text-align: center;
+                width: 60%;
 
                 li {
                     list-style: none;
-                    margin: 3px 0;
+                    display: inline-block;
+
+                    a {
+                        color: #5e5e5e;
+                        margin-left: 15px;
+                        font-weight: bold;
+                    }
                 }
+            }
+
+            a.next {
+                width: 15%;
+                float: right;
+                color: #5e5e5e;
             }
         }
     }
@@ -351,10 +428,12 @@ p.title {
 }
 
 button {
-    padding: 10px 30px;
+    padding: 5px 30px;
     color: #5f5f5f;
     font-weight: bold;
     border-radius: 4px;
+    font-size: 16px;
+    letter-spacing: 1px;
 
     &.cadastrar {
         background: #26dcf2;
@@ -365,8 +444,9 @@ button {
 }
 
 button.white {
-    border: 1px solid #5f5f5f;
+    border: 1px solid #5e5e5e;
     background: #ffffff;
+    color: #5e5e5e;
 }
 
 button.red {
