--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -118,6 +118,114 @@ body {
             }
         }
     }
+
+    #formulario_publicacao {
+        h3 {
+            font-size: 18px;
+        }
+
+        ul {
+
+            li {
+                list-style: none;
+                display: inline-block;
+                margin-left: 8%;
+
+                &:first-child {
+                    margin-left: 0;
+                }
+
+                img {
+
+                }
+            }
+        }
+
+        .block-left {
+            width: 48%;
+            float: left;
+
+            .medium_publicacao {
+                width: 50%;
+                float: left;
+
+                label.mgLeft {
+                    margin-left: 12%;
+                }
+
+                input[type="text"] {
+                    width: 80%;
+
+                    &.mgLeft {
+                        margin-left: 12%;
+                    }
+                }
+            }
+        }
+
+        .block-right {
+            width: 50%;
+            float: left;
+
+            .title-capa {
+                color: #5e5e5e;
+                border-radius: 6px;
+                font-size: 16px;
+                margin: 0 0 10px 40px;
+            }
+
+            .capa {
+                width: calc(96% - 42px);
+                height: 250px;
+                overflow: hidden;
+                border: 1px solid #5e5e5e;
+                border-radius: 6px;
+                padding: 4%;
+                margin-left: 40px;
+
+                .container-capa {
+                    width: 100%;
+                    height: 100%;
+                    overflow: hidden;
+                    border-radius: 6px;
+                }
+
+                img {
+                    width: 100%;
+                    border-radius: 6px;
+                    margin-top: -10px;
+                }
+            }
+
+            .formato {
+                width: calc(100% - 40px);
+                margin-left: 40px;
+                margin-top: 15px;
+
+                ul {
+                    li {
+                        margin-left: 10%;
+
+                        &:first-child {
+                            margin-left: 5%;
+                        }
+
+                        input[type="radio"]{
+                            margin-top: -5px;
+                            margin-right: 30px;
+                        }
+                    }
+                }
+            }
+        }
+
+        #buttons {
+
+            .white {
+                margin-left: 50px;
+            }
+        }
+    }
 }
 
 header {
@@ -322,6 +430,15 @@ form {
             }
         }
 
+        select {
+            width: 100%;
+            height: 35px;
+            border-radius: 6px;
+            color: #5f5f5f;
+            padding: 0 10px;
+            border: 1px solid #5f5f5f;
+        }
+
         input[type="image"] {
             margin: 0 0 -10px 10px;
             float: right;
@@ -416,6 +533,11 @@ p.title {
     clear: both;
 }
 
+h3 {
+    color: #5f5f5f;
+    padding: 30px 0;
+}
+
 .new-button {
     float: right;
     padding: 10px 30px;
@@ -428,7 +550,7 @@ p.title {
 }
 
 button {
-    padding: 5px 30px;
+    padding: 5px 30px 7px 30px;
     color: #5f5f5f;
     font-weight: bold;
     border-radius: 4px;
