--- a/css/src/main.css
+++ b/css/src/main.css
@@ -74,6 +74,64 @@ body {
       width: 15%;
       float: right;
       color: #5e5e5e; }
+  .center #formulario_publicacao h3 {
+    font-size: 18px; }
+  .center #formulario_publicacao ul li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 8%; }
+    .center #formulario_publicacao ul li:first-child {
+      margin-left: 0; }
+  .center #formulario_publicacao .block-left {
+    width: 48%;
+    float: left; }
+    .center #formulario_publicacao .block-left .medium_publicacao {
+      width: 50%;
+      float: left; }
+      .center #formulario_publicacao .block-left .medium_publicacao label.mgLeft {
+        margin-left: 12%; }
+      .center #formulario_publicacao .block-left .medium_publicacao input[type="text"] {
+        width: 80%; }
+        .center #formulario_publicacao .block-left .medium_publicacao input[type="text"].mgLeft {
+          margin-left: 12%; }
+  .center #formulario_publicacao .block-right {
+    width: 50%;
+    float: left; }
+    .center #formulario_publicacao .block-right .title-capa {
+      color: #5e5e5e;
+      border-radius: 6px;
+      font-size: 16px;
+      margin: 0 0 10px 40px; }
+    .center #formulario_publicacao .block-right .capa {
+      width: calc(96% - 42px);
+      height: 250px;
+      overflow: hidden;
+      border: 1px solid #5e5e5e;
+      border-radius: 6px;
+      padding: 4%;
+      margin-left: 40px; }
+      .center #formulario_publicacao .block-right .capa .container-capa {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        border-radius: 6px; }
+      .center #formulario_publicacao .block-right .capa img {
+        width: 100%;
+        border-radius: 6px;
+        margin-top: -10px; }
+    .center #formulario_publicacao .block-right .formato {
+      width: calc(100% - 40px);
+      margin-left: 40px;
+      margin-top: 15px; }
+      .center #formulario_publicacao .block-right .formato ul li {
+        margin-left: 10%; }
+        .center #formulario_publicacao .block-right .formato ul li:first-child {
+          margin-left: 5%; }
+        .center #formulario_publicacao .block-right .formato ul li input[type="radio"] {
+          margin-top: -5px;
+          margin-right: 30px; }
+  .center #formulario_publicacao #buttons .white {
+    margin-left: 50px; }
 
 header {
   width: 100%;
@@ -221,6 +279,13 @@ form {
           color: #ffffff; }
       form .form-item input[type="text"]::placeholder {
         color: #5f5f5f; }
+    form .form-item select {
+      width: 100%;
+      height: 35px;
+      border-radius: 6px;
+      color: #5f5f5f;
+      padding: 0 10px;
+      border: 1px solid #5f5f5f; }
     form .form-item input[type="image"] {
       margin: 0 0 -10px 10px;
       float: right; }
@@ -280,6 +345,10 @@ p.title {
 .clear {
   clear: both; }
 
+h3 {
+  color: #5f5f5f;
+  padding: 30px 0; }
+
 .new-button {
   float: right;
   padding: 10px 30px;
@@ -291,7 +360,7 @@ p.title {
   cursor: pointer; }
 
 button {
-  padding: 5px 30px;
+  padding: 5px 30px 7px 30px;
   color: #5f5f5f;
   font-weight: bold;
   border-radius: 4px;
